# cortex

./: .gitignore  PLAN.md  README.md  app.py  draw_graph.py  pyproject.toml  test_graph.py
data/: properties.json
src/cortex/: config.py  db.py  graph.py  graph_routes.py  nodes.py  prompts.py  state.py  tools.py
src/cortex/nodes/: __init__.py  _shared.py  answer.py  clarify.py  classify.py  parse_validate.py  sql.py
